--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class='k2' *ngIf="router.url === '/dashboard/note'">
           <img class="k21" src="assets/icons/keep_big_logo.png">
-          <span class="k22">Keep</span>
+          <span class="k22">Fundoo</span>
         </div>
         <div class='k3' *ngIf="router.url !== '/dashboard/note'">
           <span class="k22"
