--- a/src/app/pages/dashboard/components/take-note/take-note.component.html
+++ b/src/app/pages/dashboard/components/take-note/take-note.component.html
@@ -2,13 +2,13 @@
   <div class=nbar1 [style.background-color]="color">
     <div class="tnote">
 
-      <ng-container *ngIf="!hide; else showPad">
+      <ng-container *ngIf="hidden; else showPad">
         <div class="asjqsq sasr" (click)=toggleNotes()>
           <b>Take a note...</b>
         </div>
 
         <div class="note-opts">
-          <button matTooltip="New list" class="checkls-btn" (click)="onNewNoteList()" mat-icon-button>
+          <button matTooltip="New list" class="checkls-btn" (click)="newListNote()" mat-icon-button>
             <span class="material-symbols-outlined small-icon">
               check_box
             </span>
@@ -24,41 +24,40 @@
             </span>
           </button>
         </div>
+
       </ng-container>
 
       <ng-template #showPad>
         <div>
           <!-- pin component -->
           <div class="app-pin"></div>
+          <div class="asjqsq" id="noteTitle" data-text="Title" contenteditable="true" #noteTitle></div>
 
-          <div class="asjqsq" id="title" data-text="Title" contenteditable="true"></div>
-
-          <!-- <div id="asas" data-text="Take a note..." contenteditable="true"></div> -->
-          <div class="ls-ctn">
-
-            <div class="border-bx">
-              <span class="material-symbols-outlined small-icon prefix-ico">check_box_outline_blank</span>
-              <div class="item" contenteditable="true"></div>
-              <span class="material-symbols-outlined small-icon suffix-ico">close</span>
+          <ng-container *ngIf="noteType == 'plain'; else listTypeTemplate">
+            <div id="plainNote" class="asjqsq" data-text="Take a note..." contenteditable="true" #plainNote></div>
+          </ng-container>
+          <ng-template #listTypeTemplate>
+            <div id="listNote" class="ls-ctn" #listNote>
+              <div class="mask-ctn">
+                <span class="material-symbols-outlined small-icon prefix-ico"> add </span>
+                <div class="frm"> List Item </div>
+              </div>
             </div>
-
-            <div class="border-bx">
-              <span class="material-symbols-outlined small-icon prefix-ico"> add </span>
-              <div class="item"> List Item </div>
-              <div class="item trigger-ctn" contenteditable="true"></div>
-            </div>
-
-          </div>
+          </ng-template>
+          
         </div>
 
         <div class="ctrl-bar">
           <app-icons-toolbar style="flex: 1;" [undo]="userNoteMsg" (archiveCard)="userArchive($event)"
             (colorCard)="noteColor($event)" (reminderCard)="reminder($event)">
           </app-icons-toolbar>
-          <div role="button" class="clo" (click)="send()">Close</div>
+          <div role="button" class="closeNote" (click)="onSend()">Close</div>
         </div>
-      </ng-template>
 
+      </ng-template>
     </div>
   </div>
 </div>
+
+
+
