--- a/src/app/pages/dashboard/components/take-note/take-note.component.scss
+++ b/src/app/pages/dashboard/components/take-note/take-note.component.scss
@@ -69,7 +69,7 @@
   position: relative;
 }
 
-#asas {
+#plainNote {
   min-height: 24px;
   outline: none;
   padding: 12px 16px;
@@ -82,9 +82,8 @@
   line-height: 1.25rem;
 }
 
-::-webkit-input-placeholder,
+
 .sasr {
-  /* Chrome/Opera/Safari */
   letter-spacing: 0.00625em;
   font-family: "google-sans", "Roboto", Arial, sans-serif;
   font-size: 1rem;
@@ -93,9 +92,7 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
-.app-pin {
-  float: right;
-}
+
 
 .asjqsq[contentEditable="true"]:empty:before {
   content: attr(data-text);
@@ -112,7 +109,11 @@
 //   color:gray
 // }
 
-.clo {
+.app-pin {
+  float: right;
+}
+
+.closeNote {
   margin-right: 15px;
   border-radius: 4px;
   box-sizing: border-box;
@@ -124,11 +125,11 @@
   font-weight: 500;
   height: 36px;
   padding: 8px 24px;
-}
-
-.clo:hover {
-  background-color: rgba(95, 99, 104, 0.05);
   cursor: pointer;
+
+  &:hover {
+    background-color: rgba(95, 99, 104, 0.05);
+  }
 }
 
 @media (max-width: 601px) {
@@ -137,55 +138,68 @@
   }
 }
 
-.item {
-  min-height: 20px;
-  padding: 5px 45px 5px 53px;
-
-  color: rgba(0, 0, 0, 0.7);
-  letter-spacing: .0178571429em;
-  font-family: "Google Sans", Roboto, Arial, sans-serif;
-  font-size: .875rem;
-  font-weight: 500;
-  line-height: 1.25rem;
-  user-select: none;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.border-bx {
-  min-height: 22px;
+.ls-ctn {
   position: relative;
+  min-height: 30px;
+
+  >div {
+    min-height: 22px;
+    position: relative;
+    outline: none;
+  }
+
+  .mask-ctn {
+    position: absolute;
+    box-sizing: border-box;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    background: white;
+  }
+
+  .frm-ctn {
+    z-index: 2;
+  }
+
+  .frm {
+    min-height: 20px;
+    padding: 5px 45px 5px 53px;
+    color: rgba(0, 0, 0, 0.7);
+    letter-spacing: .0178571429em;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: .875rem;
+    font-weight: 500;
+    line-height: 1.25rem;
+    user-select: none;
+    width: 100%;
+    box-sizing: border-box;
+    outline: none;
+
+    &:focus {
+      border-top: 1px solid #d9d9d9;
+      border-bottom: 1px solid #d9d9d9;
+    }
+  }
+
+  .prefix-ico {
+    left: 22px;
+  }
+
+  .suffix-ico {
+    right: 22px;
+  }
+
+  .small-icon {
+    position: absolute;
+    top: 6px;
+    font-size: 18px;
+    opacity: 0.54;
+    outline: none;
+    user-select: none;
+  }
 }
 
-
-
-.trigger-ctn {
-  min-height: 20px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 1000000;
-  border: 1px solid red;
-  box-sizing: border-box;
-  width: 100%;
-  outline: none;
-}
-
-.prefix-ico {
-  position: absolute;
-  top: 6px;
-  left: 22px;
-}
-
-.suffix-ico {
-  position: absolute;
-  top: 6px;
-  right: 22px;
-}
-
-.small-icon {
-  font-size: 18px;
-  opacity: 0.54;
-  outline: none;
-  user-select: none;
+.frm-ctn[data-complete="true"] .frm {
+  text-decoration: line-through;
 }
