added warning feature

--- a/src/app/pages/dashboard/components/trash/trash.component.html
+++ b/src/app/pages/dashboard/components/trash/trash.component.html
@@ -16,7 +16,7 @@
     </ng-container>
 
     <ng-template #trashContent>
-        <app-user-notes [getCards]="trashCards" (trashAction)="userRes()">
+        <app-user-notes [getCards]="trashCards" (trashAction)="handleUserAction()">
         </app-user-notes>
     </ng-template>
 </div>
