--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -304,6 +304,31 @@ form svg {
   font-size: 1.9rem;
   text-align: center;
   font-weight: 400;
+  background-position: top center;
+  background-size: cover;
+}
+
+.profile-ctn {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid silver;
+  overflow: hidden;
+  font-family: "product-sans", Arial, sans-serif;
+  font-size: 28px;
+
+  background-color: #ffd602;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .sbar {
